fix size dark mode img

--- a/dark-mode-tutorial/dark-mode.css
+++ b/dark-mode-tutorial/dark-mode.css
@@ -1,4 +1,4 @@
 .palette {
-    background: url("dark-mode-palette.png");
+    background: url("dark-mode-palette.png") no-repeat;
     background-size: contain;
 }
